[gd_scene load_steps=2 format=3 uid="uid://c0pu41tigjecp"]

[ext_resource type="Script" uid="uid://bktw17vb5yvs1" path="res://ui/menu.gd" id="1_bwjgb"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_bwjgb")

[node name="HostBtn" type="Button" parent="."]
offset_left = 300.0
offset_top = 274.0
offset_right = 393.0
offset_bottom = 327.0
theme_override_font_sizes/font_size = 32
text = "HOST"

[node name="JoinBtn" type="Button" parent="."]
offset_left = 420.0
offset_top = 274.0
offset_right = 500.0
offset_bottom = 327.0
theme_override_font_sizes/font_size = 32
text = "JOIN"

[node name="NameEdit" type="LineEdit" parent="."]
offset_left = 300.0
offset_top = 520.0
offset_right = 500.0
offset_bottom = 562.0
theme_override_font_sizes/font_size = 24
placeholder_text = "name"

[connection signal="pressed" from="HostBtn" to="." method="_on_host_btn_pressed"]
[connection signal="pressed" from="JoinBtn" to="." method="_on_join_btn_pressed"]
